--- a/Simulations/Demo_2022.vcxproj
+++ b/Simulations/Demo_2022.vcxproj
@@ -231,6 +231,10 @@
   <ItemGroup>
     <ClInclude Include="DrawingUtilitiesClass.h" />
     <ClInclude Include="MassSpringSystemSimulator.h" />
+	<ClInclude Include="MassSpringSystemSimulator.cpp" />
+	<ClInclude Include="RigidBodySystemSimulator.cpp" />
+	<ClInclude Include="RigidBodySystemSimulator.h" />
+	<ClInclude Include="collisionDetect.h" />
     <ClInclude Include="Simulator.h" />
     <ClInclude Include="TemplateSimulator.h" />
     <ClInclude Include="util\FFmpeg.h" />
