--- a/Simulations/Demo_2022.vcxproj
+++ b/Simulations/Demo_2022.vcxproj
@@ -224,17 +224,14 @@
     </FxCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="RigidBodySystemSimulator.cpp" />
     <ClCompile Include="TemplateSimulator.cpp" />
     <ClCompile Include="util\FFmpeg.cpp" />
     <ClCompile Include="util\util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DrawingUtilitiesClass.h" />
-    <ClInclude Include="MassSpringSystemSimulator.h" />
-	<ClInclude Include="MassSpringSystemSimulator.cpp" />
-	<ClInclude Include="RigidBodySystemSimulator.cpp" />
-	<ClInclude Include="RigidBodySystemSimulator.h" />
-	<ClInclude Include="collisionDetect.h" />
+    <ClInclude Include="RigidBodySystemSimulator.h" />
     <ClInclude Include="Simulator.h" />
     <ClInclude Include="TemplateSimulator.h" />
     <ClInclude Include="util\FFmpeg.h" />
